--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
     
     <footer class="footer">
         <div class="container">
-            <p>Made with <span class="blinking">▋</span> | © 20XX rith | All systems are vulnerable</p>
+            <p>Made with <span class="blinking">▋</span> | © 20XX BRAVO | All systems are vulnerable</p>
         </div>
     </footer>
 
