--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BRAVO</title>
+        <!-- add icon link -->
+    <link rel="icon" href="https://github.com/BRAVO-IT/About/blob/main/IMG_2945.jpeg"
+        type="image/x-icon" />
     <style>
         :root {
             --neon-green: #0f0;
