--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BRAVO</title>
         <!-- add icon link -->
-    <link rel="icon" href="https://github.com/BRAVO-IT/About/blob/main/IMG_2945.png"
+    <link rel="icon" href="https://raw.githubusercontent.com/BRAVO-IT/About/refs/heads/main/IMG_2945.png"
         type="image/x-icon" />
     <style>
         :root {
