--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BRAVO</title>
-        <!-- add icon link -->
-    <link rel="icon" href="https://raw.githubusercontent.com/BRAVO-IT/About/refs/heads/main/IMG_2945.png"
-        type="image/x-icon" />
     <style>
         :root {
             --neon-green: #0f0;
@@ -657,6 +654,33 @@
                         </div>
                         <div class="project">
                             <h3 class="project-title">VLESS&VMESS v2ray</h3>
+                            <p class="project-description">Fast service, best quality and didecated ip. </p>
+                            <div class="tags">
+                                <span class="tag">Python</span>
+                                <span class="tag">Telegram bot</span>
+                                <span class="tag">GitHub deploy</span>
+                            </div> 
+                        </div>
+                        <div class="project">
+                            <h3 class="project-title">OpenVPN Server</h3>
+                            <p class="project-description">Fast service, best quality and didecated ip. </p>
+                            <div class="tags">
+                                <span class="tag">Python</span>
+                                <span class="tag">Telegram bot</span>
+                                <span class="tag">GitHub deploy</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h3 class="project-title">MTProxy</h3>
+                            <p class="project-description">Fast service, best quality and didecated ip. </p>
+                            <div class="tags">
+                                <span class="tag">Python</span>
+                                <span class="tag">Telegram bot</span>
+                                <span class="tag">GitHub deploy</span>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h3 class="project-title">Shadowowsock</h3>
                             <p class="project-description">Fast service, best quality and didecated ip. </p>
                             <div class="tags">
                                 <span class="tag">Python</span>
